# sudachi-wasm

./: Cargo.toml  DISCLAIMER.md  README.md  fetch_dictionary.sh  wasm-pack-inline.mjs
docs/: index.html
src/: lib.rs
src/dic/: character_category.rs
src/plugin/oov/: mecab_oov.rs
sudachi/: Cargo.toml
sudachi/src/: lib.rs
sudachi/src/dic/: character_category.rs
sudachi/src/plugin/oov/mecab_oov/: mod.rs
sudachi/test/: browser.html  node.mjs
test/: browser.html  node.mjs
