[package]
name = "sudachi"
version = "0.1.4"
authors = ["Sorami Hisamoto <s@89.io>", "Tomoyuki Hata <hato6502@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
multiset = "0.0.5"
nom = "4.2.2"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
thiserror = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
# Compile dictionary into executable (specifying dictionary becomes optional)
bake_dictionary = []
